--- a/base-project/style.css
+++ b/base-project/style.css
@@ -74,3 +74,24 @@ button{
     border: 3px solid rgb(224, 83, 83);
     color: rgb(216, 216, 216);
 }
+
+.block-action{
+    pointer-events: none;
+    background-color:  rgba(221, 217, 245, 0.5)  ; 
+   
+}
+
+.loader {
+    border: 6px solid #f3f3f3; /* Light grey */
+    border-top: 6px solid rgb(119, 104, 253);; /* Blue */
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin:25px;
+    animation: spin 1.5s both infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
