--- a/base-project/style.css
+++ b/base-project/style.css
@@ -69,6 +69,16 @@ button{
     outline: none;
 }
 
+.tiles_set{
+    padding: inherit;
+    margin: inherit;
+    text-align: justify;
+    width: 280px;
+    box-shadow: 5px 5px 20px rgba(168, 156, 156, 0.5)  ; 
+    border-radius: 6px;;
+    outline: none;
+}
+
 .error{
     padding: 10px;
     border: 3px solid rgb(224, 83, 83);
@@ -78,7 +88,6 @@ button{
 .block-action{
     pointer-events: none;
     background-color:  rgba(221, 217, 245, 0.5)  ; 
-   
 }
 
 .loader {
